# ir_telemetry

./: Cargo.toml  LICENSE.txt  README.md
examples/: example.rs
src/: client.rs  error.rs  ir_data.rs  ir_data_inner.rs  lib.rs  types.rs  utils.rs
src/mapped_file/: full_value.rs  header.rs  memfile.rs  values.rs  var_header.rs
src/session_info/: camera_info.rs  driver_info.rs  qualify_results.rs  radio_info.rs  session.rs  session_info.rs  split_time_info.rs  weekend_info.rs
src/session_info/values/: bool.rs  measurement.rs  percent.rs
