[package]
name = "ir_telemetry"
version = "0.1.0"
edition = "2021"

[[example]]
name = "example"
path = "examples/example.rs"


[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
bytes = "1.6.0"
log = "0.4.22"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.204", features = ["derive"] }
windows-core = "0.58.0"

[features]
default = []
# Create a data dump of the IR file.
create_datadump = []
# Serializes the 'measurement' in the session data to only the value, drops the units.
value_only_measurement = []

[dev-dependencies]
pretty_env_logger = "0.5.0"
serde_json = "1.0.122"
serde_yaml = "0.9.34"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Memory",
]
